# http-service

./: .gitignore  LICENSE  MANIFEST.in  Makefile  README.md  build.py  build_script.py  env_example.env  example_usage.py  generate_docs.py  pyproject.toml  requirements-all.txt  requirements-dev.txt  requirements-docs.txt  requirements-test.txt  requirements.txt  setup.cfg  setup.py
.github/workflows/: build.yml
common/: __init__.py  json_utils.py
docs/: README.md  api_reference.md  conf.py  examples.md  index.md  installation.md  quickstart.md
http_service/: __init__.py  circuit_breaker.py  cli.py  client.py  config.py  decorators.py  models.py  utils.py
http_service/cli/: __init__.py
http_service/core/: client.py  config.py  utils.py
http_service/patterns/: bulkhead.py  circuit_breaker.py
models/: __init__.py
tests/: __init__.py  conftest.py  test_circuit_breaker.py  test_config.py  test_decorators.py  test_http_client.py  test_integration.py  test_models.py  test_utils.py
tests/common/: test_json_utils.py  test_models_imports.py
tests/http_service/: test_http_client.py
tests/http_service/core/: test_config.py  test_integration.py  test_utils.py
tests/http_service/patterns/: test_bulkhead.py  test_circuit_breaker.py  test_decorators.py
tests/models/: test_models.py
